Project through Task 5.3 Partial Commit

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,13 +1,21 @@
 .home {
 
+  header {
+    padding: 20px 0;
+    border-bottom: 2px dashed @shark;
+  }
+
+  header h1 {
+    padding: 20px 0;
+
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
-   
-    
+ 
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -25,7 +33,10 @@
 
   .inverse-content {
     padding-bottom: 30px;
-    border-bottom: 2px dashed @navigation-border;
+    @media @mobile {
+      background: blue;
+    }
+    //border-bottom: 2px dashed @navigation-border;//
 
     .text-content {
       padding-left: 1%;
@@ -47,9 +58,13 @@
     }
   }
 
+button {
+  .button-style(white, 75%, @eastern-blue, 10px )
+}
+
   .content-pick {
     padding-top: 30px;
-    border-top: 2px dashed @navigation-border;
+    //border-top: 2px dashed @navigation-border;//
     display: flex;
     justify-content: space-between;
 
