--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,20 @@
-// Navigation Styles here
+// Navigation Styles here //
+nav {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 2px dashed silver;
+    padding: 20px 0;
+}
+
+.link-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 60%;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    font-size: 2rem;
+}
