--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,76 +1,103 @@
 .home {
 
   header {
-    padding: 20px 0;
-    border-bottom: 2px dashed @shark;
-  }
-
-  header h1 {
-    padding: 20px 0;
-
-  }
-
-  .content-section {
-    margin: 30px 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
- 
-    .text-content {
-      width: 48%;
-      padding-right: 1%;
-    }
-
-    .img-content {
-      width: 48%;
-      padding-left: 1%;
+    padding: 90px 0 10px;
+    border-bottom: 2px dashed @navigation-border;
 
       img {
-        border-radius: 10px;
+        max-width: 100%;
+        height: auto;
       }
-    }
+  
+        h1 {
+          margin-top: 20px;
+        }
   }
+}
 
-  .inverse-content {
-    padding-bottom: 30px;
-    @media @mobile {
-      background: blue;
-    }
-    //border-bottom: 2px dashed @navigation-border;//
+.content-section {
+  margin: 30px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;  
 
+    .text-content {
+      width: 48%;
+      padding-right: 1%; 
+
+        @media @mobile {
+          width: 100%;
+          padding: 0;
+        }
+        
+          .img-content {
+            width: 48%;
+            padding-left: 1%;
+
+              img {
+                border-radius: 10px;
+              }
+          }        
+    } 
+}
+
+.inverse-content {
+  padding-bottom: 30px;
+  border-bottom: 2px dashed @navigation-border;
+  
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+
+      @media @mobile {
+        order: 1;
+      }
     }
 
-    .img-content {
-      padding-right: 1%;
-      padding-left: 0;
-    }
-  }
+        .img-content {
+          padding-right: 1%;
+          padding-left: 0;
 
-  .content-destination {
-    width: 75%;
-    margin: 0 auto 30px;
-
-    img {
-      border-radius: 10px;
-    }
-  }
-
-button {
-  .button-style(white, 75%, @eastern-blue, 10px )
+          @media @mobile {
+            order: 2;
+          }
+        }
 }
 
-  .content-pick {
-    padding-top: 30px;
-    //border-top: 2px dashed @navigation-border;//
-    display: flex;
-    justify-content: space-between;
+.content-destination {
+  width: 75%;
+  margin: 0 auto 30px;
 
-    .destination {
-      width: 30%;
-      margin-bottom: 30px;
+  @media @mobile {
+    width: 100%;
+  }
+
+  img {
+    border-radius: 10px;
+  }
+}
+
+.content-pick {
+  padding-top: 30px;
+  border-top: 2px dashed @navigation-border;
+  display: flex;
+  justify-content: space-between;
+
+  @media @mobile {
+    flex-wrap: wrap;
+  }
+
+  .destination {
+    width: 30%;
+    margin-bottom: 30px;
+
+    @media @mobile {
+      width: 80%;
+      margin: 0 auto 30px;
+    }
+    
+    .btn {
+      .button-creator(200px, 45px, @button-bg, @white, 1.8rem);     
     }
   }
-}// home
+}
