--- a/css/index.css
+++ b/css/index.css
@@ -168,26 +168,56 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-nav {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 2px dashed silver;
-  padding: 20px 0;
+@media (max-width: 500px) {
+  .container {
+    width: 90%;
+    margin: 0 5%;
+  }
 }
-nav .link-box {
+.main-navigation {
+  width: 100%;
+  height: 90px;
+  background: #FFFFFF;
+  border-bottom: 2px dashed #C0C0C0;
+  position: fixed;
+}
+.main-navigation .nav-container {
+  height: 100%;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  width: 60%;
+  justify-content: space-between;
 }
-nav .link-box a {
+@media (max-width: 500px) {
+  .main-navigation .nav-container {
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 10px;
+  }
+}
+@media (max-width: 500px) {
+  .main-navigation .nav-container .logo-heading {
+    font-size: 3rem;
+  }
+}
+.main-navigation .nav-container .nav {
+  width: 350px;
+  display: flex;
+  justify-content: space-evenly;
+}
+@media (max-width: 500px) {
+  .main-navigation .nav-container .nav {
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+.main-navigation .nav-container .nav a {
+  font-size: 1.6rem;
+  color: #212529;
   text-decoration: none;
-  color: black;
-  font-size: 2rem;
 }
 .footer {
   width: 100%;
-  border-top: 2px dashed silver;
+  border-top: 2px dashed #C0C0C0;
   background: #FFEBCD;
 }
 .footer p {
@@ -196,90 +226,127 @@ nav .link-box a {
   font-size: 1.6rem;
   padding: 20px;
 }
-.home header {
-  padding: 20px 0;
+.home .intro {
+  padding: 90px 0 10px;
   border-bottom: 2px dashed #C0C0C0;
 }
-.home header h1 {
-  padding: 20px 0;
+.home .intro img {
+  max-width: 100%;
+  height: auto;
 }
-.content-section {
+.home .intro h2 {
+  margin-top: 20px;
+}
+.home .content-section {
   margin: 30px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.content-section .text-content {
+.home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
 @media (max-width: 500px) {
-  .content-section .text-content {
+  .home .content-section .text-content {
     width: 100%;
     padding: 0;
   }
 }
-.content-section .text-content .img-content {
+.home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
 }
-.content-section .text-content .img-content img {
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    padding: 0;
+  }
+}
+.home .content-section .img-content img {
   border-radius: 10px;
 }
-.inverse-content {
+@media (max-width: 500px) {
+  .home .content-section .img-content img {
+    width: 100%;
+  }
+}
+.home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
 }
-.inverse-content .text-content {
+.home .inverse-content .text-content {
   padding-left: 1%;
   padding-right: 0;
 }
 @media (max-width: 500px) {
-  .inverse-content .text-content {
+  .home .inverse-content .text-content {
     order: 1;
   }
 }
-.inverse-content .img-content {
+.home .inverse-content .img-content {
   padding-right: 1%;
   padding-left: 0;
 }
 @media (max-width: 500px) {
-  .inverse-content .img-content {
+  .home .inverse-content .img-content {
     order: 2;
   }
 }
-.content-pick {
+.home .content-destination {
+  width: 75%;
+  margin: 0 auto 30px;
+}
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
+.home .content-destination img {
+  border-radius: 10px;
+}
+.home .content-pick {
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
 }
 @media (max-width: 500px) {
-  .content-pick {
+  .home .content-pick {
     flex-wrap: wrap;
   }
 }
-.content-pick .destination {
-  width: 75%;
-  margin: 0 auto 30px;
+.home .content-pick .destination {
+  width: 30%;
+  margin-bottom: 30px;
 }
 @media (max-width: 500px) {
-  .content-pick .destination {
+  .home .content-pick .destination {
     width: 80%;
     margin: 0 auto 30px;
   }
 }
-.content-pick .destination img {
-  border-radius: 10px;
+.home .content-pick .destination .btn {
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 45px;
+  background-color: #17A2B8;
+  color: #FFFFFF;
+  border: 1px solid #C0C0C0;
+  cursor: pointer;
+  font-size: 1.8rem;
 }
-button {
-  color: white;
-  width: 75%;
-  font-size: 2rem;
-  height: 40px;
-  margin: 20px 0;
-  background: #17A2B8;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
+@media (max-width: 500px) {
+  .home .content-pick .destination .btn {
+    width: 100%;
+  }
+}
+.home .content-pick .destination .btn:hover {
+  background: #FFFFFF;
+  color: #17A2B8;
 }
