--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,50 +1,60 @@
 .home {
 
-  header {
+  .intro {
     padding: 90px 0 10px;
     border-bottom: 2px dashed @navigation-border;
 
-      img {
-        max-width: 100%;
-        height: auto;
-      }
-  
-        h1 {
-          margin-top: 20px;
-        }
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    h2 {
+      margin-top: 20px;
+    }
   }
-}
 
-.content-section {
-  margin: 30px 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;  
+  .content-section {
+    margin: 30px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
+   
+    
     .text-content {
       width: 48%;
-      padding-right: 1%; 
+      padding-right: 1%;
+
+      @media @mobile {
+        width: 100%;
+        padding: 0;
+      }
+    }
+
+    .img-content {
+      width: 48%;
+      padding-left: 1%;
+
+      @media @mobile {
+        width: 100%;
+        padding: 0;
+      }
+
+      img {
+        border-radius: 10px;
 
         @media @mobile {
           width: 100%;
-          padding: 0;
         }
-        
-          .img-content {
-            width: 48%;
-            padding-left: 1%;
+      }
+    }
+  }
 
-              img {
-                border-radius: 10px;
-              }
-          }        
-    } 
-}
+  .inverse-content {
+    padding-bottom: 30px;
+    border-bottom: 2px dashed @navigation-border;
 
-.inverse-content {
-  padding-bottom: 30px;
-  border-bottom: 2px dashed @navigation-border;
-  
     .text-content {
       padding-left: 1%;
       padding-right: 0;
@@ -54,50 +64,51 @@
       }
     }
 
-        .img-content {
-          padding-right: 1%;
-          padding-left: 0;
+    .img-content {
+      padding-right: 1%;
+      padding-left: 0;
 
-          @media @mobile {
-            order: 2;
-          }
-        }
-}
-
-.content-destination {
-  width: 75%;
-  margin: 0 auto 30px;
-
-  @media @mobile {
-    width: 100%;
+      @media @mobile {
+        order: 2;
+      }
+    }
   }
 
-  img {
-    border-radius: 10px;
-  }
-}
-
-.content-pick {
-  padding-top: 30px;
-  border-top: 2px dashed @navigation-border;
-  display: flex;
-  justify-content: space-between;
-
-  @media @mobile {
-    flex-wrap: wrap;
-  }
-
-  .destination {
-    width: 30%;
-    margin-bottom: 30px;
+  .content-destination {
+    width: 75%;
+    margin: 0 auto 30px;
 
     @media @mobile {
-      width: 80%;
-      margin: 0 auto 30px;
+      width: 100%;
     }
-    
-    .btn {
-      .button-creator(200px, 45px, @button-bg, @white, 1.8rem);     
+
+    img {
+      border-radius: 10px;
     }
   }
-}
+
+  .content-pick {
+    padding-top: 30px;
+    border-top: 2px dashed @navigation-border;
+    display: flex;
+    justify-content: space-between;
+
+    @media @mobile {
+      flex-wrap: wrap;
+    }
+
+    .destination {
+      width: 30%;
+      margin-bottom: 30px;
+
+      @media @mobile {
+        width: 80%;
+        margin: 0 auto 30px;
+      }
+      
+      .btn {
+        .button-creator(200px, 45px, @button-bg, @white, 1.8rem);     
+      }
+    }
+  }
+}// home
