--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,15 +1,32 @@
-// Mixins in here //
-
-.button-style(@color, @width, @background, @radius) {
-    color: @color;
-    width: @width;
-    font-size: 2rem;
-    height: 40px;
-    margin: 20px 0;
-    background: @background;
-    border-radius: @radius;
-    // Safari 3-4, iOS 1-3.2, Android 1.6 //
+.center() {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .border-radius(@radius) {
     -webkit-border-radius: @radius;
-    // Firefox 1-3.6 //
-    -moz-border-radius: @radius;
-}
+       -moz-border-radius: @radius;
+            border-radius: @radius;
+  }
+  
+  .button-creator(@width, @height, @bg-color, @font-color, @font-size) {
+    .border-radius(15px);
+    .center;
+    width: @width;
+    height: @height;
+    background-color: @bg-color;
+    color: @font-color;
+    border: 1px solid @silver;
+    cursor: pointer;
+    font-size: @font-size;
+  
+    @media @mobile {
+      width: 100%;
+    }
+    
+    &:hover {
+      background: @white;
+      color: @button-bg;
+    }
+  }
