--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,3 @@
-@mobile: ~"(max-width: 500px)";
 
 // Color assignments 
 @font-color: @shark;
@@ -13,3 +12,6 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+// Escaping
+@mobile: ~"(max-width: 500px)";
