--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,32 +1,18 @@
-.center() {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .border-radius(@radius) {
-    -webkit-border-radius: @radius;
-       -moz-border-radius: @radius;
-            border-radius: @radius;
-  }
-  
-  .button-creator(@width, @height, @bg-color, @font-color, @font-size) {
-    .border-radius(15px);
-    .center;
-    width: @width;
-    height: @height;
-    background-color: @bg-color;
-    color: @font-color;
-    border: 1px solid @silver;
-    cursor: pointer;
-    font-size: @font-size;
-  
-    @media @mobile {
-      width: 100%;
-    }
-    
-    &:hover {
-      background: @white;
-      color: @button-bg;
-    }
-  }
+// Mixins in here
+
+.button(@button-bg, @font-color) {
+  display: block;
+  margin: 0 10px 20px 0;
+  height: 45px;
+  font-size: 2rem;
+  border-radius: 10px;
+  padding-top: 10px;
+  text-align: center;
+  width: 80%;
+  background-color: @button-bg;
+  color: @font-color;
+
+  @media @mobile {
+      width: 90%; 
+     }
+}
