--- a/less/index.less
+++ b/less/index.less
@@ -1,14 +1,12 @@
-// Variables and Mixins
-@import 'variables.less';
-@import 'mixins.less';
+//Variables, Mixins
+@import "variables";
+@import "mixins";
 
-// Reset and Global Styles
-@import 'reset.less';
-@import 'global.less';
+//General
+@import "reset";
+@import "global";
 
-// Reusable components
-@import 'navigation.less';
-@import 'footer.less';
-
-// Page Specific
-@import 'home-page.less';
+//Components
+@import "navigation";
+@import "footer";
+@import "home-page";
