--- a/css/index.css
+++ b/css/index.css
@@ -143,210 +143,264 @@ h4,
 h5 {
   font-family: 'Indie Flower', cursive;
 }
+
 h1 {
   font-size: 4rem;
 }
+
 h2 {
   font-size: 3.2rem;
   padding-bottom: 10px;
 }
+
 h4 {
   font-size: 2.5rem;
   padding-bottom: 10px;
 }
+
 p {
   line-height: 1.5;
   font-size: 1.6rem;
   padding-bottom: 10px;
 }
+
 img {
   max-width: 100%;
   height: auto;
 }
+
 .container {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
 }
-@media (max-width: 500px) {
-  .container {
-    width: 90%;
-    margin: 0 5%;
-  }
-}
-.main-navigation {
-  width: 100%;
-  height: 90px;
-  background: #FFFFFF;
-  border-bottom: 2px dashed #C0C0C0;
-  position: fixed;
-}
-.main-navigation .nav-container {
-  height: 100%;
+
+nav {
+  width: 45%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
+
 @media (max-width: 500px) {
-  .main-navigation .nav-container {
-    flex-wrap: wrap;
-    justify-content: center;
+  nav {
     padding-top: 10px;
-  }
-}
-@media (max-width: 500px) {
-  .main-navigation .nav-container .logo-heading {
-    font-size: 3rem;
-  }
-}
-.main-navigation .nav-container .nav {
-  width: 350px;
-  display: flex;
-  justify-content: space-evenly;
-}
-@media (max-width: 500px) {
-  .main-navigation .nav-container .nav {
     width: 100%;
-    justify-content: space-around;
   }
 }
-.main-navigation .nav-container .nav a {
-  font-size: 1.6rem;
-  color: #212529;
+
+nav a {
   text-decoration: none;
+  color: black;
+  font-size: 1.6rem;
 }
+
+@media (max-width: 500px) {
+  nav a {
+    padding: 0 10px;
+  }
+}
+
 .footer {
   width: 100%;
-  border-top: 2px dashed #C0C0C0;
+  border-top: 2px dashed silver;
   background: #FFEBCD;
 }
+
 .footer p {
   text-align: center;
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
 }
-.home .intro {
-  padding: 90px 0 10px;
+
+header {
+  width: 100%;
+  border-bottom: 2px dashed #C0C0C0;
+  color: #212529;
+  margin-top: 30px;
+  padding-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 500px) {
+  header {
+    padding-bottom: 10px;
+  }
+}
+
+header .navDiv {
+  width: 800px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media (max-width: 500px) {
+  header .navDiv {
+    flex-direction: column;
+    align-items: space-between;
+  }
+}
+
+.home .funBusSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+@media (max-width: 500px) {
+  .home .funBusSection {
+    width: 90%;
+    margin: 0 5%;
+  }
+}
+
+.home .funBusSection .welcomeDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 20px 0;
   border-bottom: 2px dashed #C0C0C0;
 }
-.home .intro img {
-  max-width: 100%;
-  height: auto;
-}
-.home .intro h2 {
-  margin-top: 20px;
-}
+
 .home .content-section {
   margin: 30px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+@media (max-width: 500px) {
+  .home .content-section {
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+}
+
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+
 @media (max-width: 500px) {
   .home .content-section .text-content {
-    width: 100%;
-    padding: 0;
+    width: 90%;
+    margin: 0 5%;
   }
 }
+
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
 }
+
 @media (max-width: 500px) {
   .home .content-section .img-content {
-    width: 100%;
-    padding: 0;
+    width: 90%;
+    margin: 0 5%;
   }
 }
+
 .home .content-section .img-content img {
   border-radius: 10px;
 }
-@media (max-width: 500px) {
-  .home .content-section .img-content img {
-    width: 100%;
-  }
-}
+
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
 }
+
+@media (max-width: 500px) {
+  .home .inverse-content {
+    flex-direction: column-reverse;
+  }
+}
+
 .home .inverse-content .text-content {
   padding-left: 1%;
   padding-right: 0;
 }
-@media (max-width: 500px) {
-  .home .inverse-content .text-content {
-    order: 1;
-  }
-}
+
 .home .inverse-content .img-content {
   padding-right: 1%;
   padding-left: 0;
 }
+
 @media (max-width: 500px) {
   .home .inverse-content .img-content {
-    order: 2;
+    width: 90%;
+    margin: 0 5%;
   }
 }
+
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
 }
+
 @media (max-width: 500px) {
   .home .content-destination {
-    width: 100%;
+    width: 90%;
+    margin: 0 auto 5%;
   }
 }
+
 .home .content-destination img {
   border-radius: 10px;
 }
+
+@media (max-width: 500px) {
+  .home .content-destination img {
+    width: 95%;
+    margin: 0 5%;
+  }
+}
+
 .home .content-pick {
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
 }
+
 @media (max-width: 500px) {
   .home .content-pick {
-    flex-wrap: wrap;
+    width: 90%;
+    margin: 0 5%;
+    padding-left: 20px;
+    flex-direction: column;
   }
 }
+
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
 }
+
 @media (max-width: 500px) {
   .home .content-pick .destination {
-    width: 80%;
-    margin: 0 auto 30px;
+    width: 90%;
+    margin: 0 5%;
   }
 }
+
 .home .content-pick .destination .btn {
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  border-radius: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
+  display: block;
+  margin: 0 10px 20px 0;
   height: 45px;
+  font-size: 2rem;
+  border-radius: 10px;
+  padding-top: 10px;
+  text-align: center;
+  width: 80%;
   background-color: #17A2B8;
-  color: #FFFFFF;
-  border: 1px solid #C0C0C0;
-  cursor: pointer;
-  font-size: 1.8rem;
+  color: white;
 }
+
 @media (max-width: 500px) {
   .home .content-pick .destination .btn {
-    width: 100%;
+    width: 90%;
   }
-}
-.home .content-pick .destination .btn:hover {
-  background: #FFFFFF;
-  color: #17A2B8;
 }
